[gd_scene load_steps=2 format=3 uid="uid://ce20m47vr360v"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Node"]
script = ExtResource("1")

[node name="Host" type="Button" parent="."]
offset_left = 75.9996
offset_top = 177.649
offset_right = 87.9996
offset_bottom = 197.649
text = "Host Server"

[node name="Join" type="Button" parent="."]
offset_left = 78.8495
offset_top = 227.999
offset_right = 157.85
offset_bottom = 247.999
text = "Join Server"

[node name="Start" type="Button" parent="."]
offset_left = 180.005
offset_top = 230.504
offset_right = 263.005
offset_bottom = 250.504
disabled = true
text = "Start Game"

[node name="NameEdit" type="TextEdit" parent="."]
offset_left = 383.61
offset_top = 188.839
offset_right = 535.61
offset_bottom = 212.839

[node name="NameEdit2" type="TextEdit" parent="."]
offset_left = 383.101
offset_top = 147.762
offset_right = 538.101
offset_bottom = 171.762

[node name="Status" type="Label" parent="."]
offset_left = 239.021
offset_top = 116.312
offset_right = 279.021
offset_bottom = 130.312

[node name="SplitscreenCheckBox" type="CheckBox" parent="."]
offset_left = 180.881
offset_top = 90.1253
offset_right = 204.881
offset_bottom = 114.125

[node name="SplitscreenLabel" type="Label" parent="."]
offset_left = 69.3271
offset_top = 94.537
offset_right = 181.327
offset_bottom = 108.537
text = "Local Splitscreen:"

[node name="OfflineGameButton" type="Button" parent="."]
offset_left = 73.7338
offset_top = 139.751
offset_right = 203.734
offset_bottom = 159.751
text = "Start Offline Game"

[node name="p1_label" type="Label" parent="."]
offset_left = 198.99
offset_top = 193.388
offset_right = 374.99
offset_bottom = 207.388
text = "Player1 (Arrow Keys) Name:"

[node name="p2_label" type="Label" parent="."]
offset_left = 236.977
offset_top = 152.834
offset_right = 412.977
offset_bottom = 166.834
text = "Player2 (WASD) Name:"

[connection signal="button_down" from="Host" to="." method="_on_Host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_Join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="SplitscreenCheckBox" to="." method="_on_SplitscreenCheckBox_button_down"]
[connection signal="button_down" from="OfflineGameButton" to="." method="_on_OfflineGameButton_button_down"]
